removing popup option

--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
             showCooGrid: false,
             showFullscreenControl: true
         });
-        var cat = A.catalogFromURL('./static/catalog_votable_v2.xml', {name:'NANOGrav galaxy catalog', sourceSize:10, color:'#0080ff', shape:'circle', filter: distFilterFunction, onClick:'showPopup'});
+        var cat = A.catalogFromURL('./static/catalog_votable_v2.xml', {name:'NANOGrav galaxy catalog', sourceSize:10, color:'#0080ff', shape:'circle', filter: distFilterFunction});
         aladin.addCatalog(cat);
     });    
 
